--- a/Hail sensors measurements-git.ipynb
+++ b/Hail sensors measurements-git.ipynb
@@ -55,7 +55,6 @@
    "cell_type": "markdown",
    "id": "fdb9270c-c9a3-43e1-8cd1-1d79c7d9f45d",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -383,7 +382,6 @@
    "cell_type": "markdown",
    "id": "a976ff3d-2975-48ec-988e-9add6dcbf1cc",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -595,6 +593,7 @@
    "cell_type": "markdown",
    "id": "4516f3c8-1f70-41f8-9fb3-e9f2d9789e8a",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -671,6 +670,17 @@
    },
    "source": [
     "# General observations, hailstones size and kinetic energy distributions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "860aa48d-ab94-45be-b11b-17a5b22fc43e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sensors_filtered = make_sensors_filtered(reports_data, 'maxczc_rad4', 35)\n",
+    "sensors_filtered = sensors_filtered.loc[sensors_filtered['diameter']>=5]"
    ]
   },
   {
@@ -818,7 +828,7 @@
     "    #sns.histplot(x = data['diameter'], kde=False, stat='count',bins=30, cumulative=False, ax=ax, color='blue')\n",
     "    sns.histplot(x = data['diameter'], kde=False, stat='probability', binrange=(5,35), binwidth=1, cumulative=False, ax=ax, color='blue')\n",
     "    ax.scatter(d[0:-1] + adj,n_norm,color='tab:red')\n",
-    "    popt, pcov = curve_fit(powerlaw_3, d[0:-1] + adj, n_norm)\n",
+    "    popt, pcov = curve_fit(powerlaw_4, d[0:-1] + adj, n_norm)\n",
     "    err_pcov = np.sqrt(np.diag(pcov))\n",
     "    x_val = np.linspace(0,35,100)\n",
     "    pw1 = np.append(popt,err_pcov)\n",
@@ -851,7 +861,7 @@
    },
    "outputs": [],
    "source": [
-    "popt, pcov = curve_fit(powerlaw_3, d[0:-1] + adj, n_norm)\n",
+    "popt, pcov = curve_fit(powerlaw_4, d[0:-1] + adj, n_norm)\n",
     "err_pcov = np.sqrt(np.diag(pcov))\n",
     "pw1 = np.append(popt,err_pcov)\n",
     "pw1"
@@ -890,7 +900,6 @@
    "cell_type": "markdown",
    "id": "734b2487-6d01-483e-8b8b-8aa0842d47c8",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1361,7 +1370,6 @@
    "cell_type": "markdown",
    "id": "ee0cf262-191c-4f14-8f33-64e9fab1347d",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
